added warning popup to remove entries button. still needs functionality to be added.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
     <br>
     <button type="button" onclick="addtoprice(), haveh2()">Calculate</button><button onclick="removeh2()" id="remove">Remove Entries</button>
 </div>
+<div id="popup" class="popup">
+    <div class="popup-content">
+        <span class="close-button">&times;</span>
+        <p id="warning">Are you sure you want to delete all entries?!</p>
+        <button id="confirm">Confirm</button>
+    </div>
+</div>
     <fieldset id="field">
         <div id="list" class="content"></div>
     </fieldset>
